test_case/rust-lang_rust/30379_164597539.rs

struct S;

fn main() {
    let S = S; // error: declaration of `S` shadows an enum variant or unit-like struct in scope
}
